--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-<img src="rayo.jpg" alt="RAYO">
+    <h2>Imagen con tamaño específico:</h2>
+    <img src="rayo.jpg" width="100" height="100" alt="Descripción de la imagen">
+<!--Para crear un boton que me lleve a una pagina-->
 <button onclick="window.open('https://www.instagram.com/wrldbrynine/', '_blank')">Visitar mi Instagram</button>
 
 </body>
